--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "full-stack-demo",
+    "name": "pattis-groceries",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -13,23 +13,25 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.21.1",
         "express": "^4.17.1",
+        "lodash": "^4.17.21",
         "morgan": "^1.10.0",
         "pg": "^8.5.1",
-        "sequelize": "^6.3.5"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.11.1",
-        "@babel/polyfill": "^7.10.4",
-        "@babel/preset-env": "^7.11.0",
-        "@babel/preset-react": "^7.10.4",
-        "@babel/register": "^7.10.5",
-        "axios": "^0.21.0",
-        "babel-loader": "^8.2.2",
-        "nodemon": "^2.0.6",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "webpack": "^5.9.0",
-        "webpack-cli": "^4.2.0"
+        "sequelize": "^6.5.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.13.8",
+        "@babel/plugin-transform-runtime": "^7.13.10",
+        "@babel/preset-env": "^7.13.9",
+        "@babel/preset-react": "^7.12.13",
+        "@babel/register": "^7.13.8",
+        "babel-loader": "^8.2.2",
+        "nodemon": "^2.0.7",
+        "regenerator-runtime": "^0.13.7",
+        "webpack": "^5.24.3",
+        "webpack-cli": "^4.5.0"
     }
 }
