--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
         "sequelize": "^6.5.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.13.8",
-        "@babel/plugin-transform-runtime": "^7.13.10",
-        "@babel/preset-env": "^7.13.9",
+        "@babel/core": "^7.13.10",
+        "@babel/plugin-proposal-class-properties": "^7.13.0",
+        "@babel/preset-env": "^7.13.10",
         "@babel/preset-react": "^7.12.13",
-        "@babel/register": "^7.13.8",
         "babel-loader": "^8.2.2",
+        "babel-preset-env": "^1.7.0",
+        "html-webpack-plugin": "^5.3.0",
         "nodemon": "^2.0.7",
+        "path": "^0.12.7",
         "regenerator-runtime": "^0.13.7",
-        "webpack": "^5.24.3",
-        "webpack-cli": "^4.5.0"
+        "webpack": "^5.24.4",
+        "webpack-cli": "^4.5.0",
+        "webpack-dev-server": "^3.11.2"
     }
 }
